src/objects/OrgChartPlus__ADP_OrgChartEntity__c.object
<CustomObject>
    <description>Chart specific customer contact info</description>
    <fields>
        <fullName>OrgChartPlus__ChartPosX__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ChartPosX</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ChartPosY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ChartPosY</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Colour__c</fullName>
        <label>Colour</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__DisplayOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DisplayOrder</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__EntityCommon__c</fullName>
        <label>Entity Common</label>
        <referenceTo>OrgChartPlus__ADP_OrgChartEntityCommon__c</referenceTo>
        <relationshipLabel>ADP OrgChart Entities</relationshipLabel>
        <relationshipName>ADP_OrgChart_Entities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__HideFields__c</fullName>
        <label>HideFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__MoleculePosX__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MoleculePosX</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__MoleculePosY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MoleculePosY</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__OrgChart__c</fullName>
        <label>OrgChart</label>
        <referenceTo>OrgChartPlus__ADP_OrgChart__c</referenceTo>
        <relationshipLabel>ADP OrgChart Entities</relationshipLabel>
        <relationshipName>ADP_OrgChart_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ShowFlags__c</fullName>
        <label>ShowFlags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ADP OrgChart Entity</label>
    <nameField>
        <displayFormat>OE-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADP OrgChart Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>